# django-friendship

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.txt  CHANGELOG.rst  CHANGELOG.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  justfile  noxfile.py  pytest.ini  requirements-travisci.txt  requirements.in  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: actions.yml
docs/: Makefile  conf.py  index.rst  signals.rst  usage.rst
docs/source/: conf.py  index.rst  usage.rst
example/: manage.py
example/sample/: settings.py  urls.py  wsgi.py
friendship/: __init__.py  admin.py  apps.py  exceptions.py  models.py  signals.py  urls.py  views.py
friendship/migrations/: 0001_initial.py  0002_auto_20180705_1444.py  0002_block.py  0003_block_unique_together.py  0004_auto_20191224_1620.py  0004_auto_20200408_1844.py  0005_auto_20211005_1716.py
friendship/south_migrations/: 0001_initial.py
friendship/templates/friendship/: followers_list.html  header.html  user_actions.html
friendship/templates/friendship/block/: add.html  blockers_list.html  blocking_list.html  remove.html
friendship/templates/friendship/follow/: add.html  followers_list.html  following_list.html
friendship/templates/friendship/friend/: add.html  request.html  requests_list.html  user_list.html
friendship/templates/friendship/templatetags/: blockers.html  blocking.html  following.html  friend_count.html  friend_rejected_count.html  friend_request_count.html  friend_requests.html  friends.html
friendship/templatetags/: friendship.py  friendshiptags.py
friendship/tests/: models.py  runtests.py  tests.py
friendship/tests/templates/friendship/: base.html  header.html  user_actions.html
friendship/tests/templates/friendship/block/: add.html  blockers_list.html  blocking_list.html  remove.html
friendship/tests/templates/friendship/follow/: add.html  followers_list.html  following_list.html  remove.html
friendship/tests/templates/friendship/friend/: add.html  requests_list.html  user_list.html
friendship/tests/templates/friendship/templatetags/: followers.html  friends.html
