[metadata]
name = django_friendship
version = 1.9.4
description = django-friendship provides an easy extensible interface for following and friendship
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/revsys/django-friendship/
author = Frank Wiles
author_email = frank@revsys.com
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Framework :: Pytest
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
zip_safe = False
tests_require = django-friendship[test]

[options.extras_require]
test = 
	black==21.7b0
	pytest
	pytest-django
	pytest-cov
	pytest-pythonpath
	factory-boy

[bdist_wheel]
universal = 1

[flake8]
ignore = E203, E501, W503
select = C,E,F,W,B,B950
exclude = 
	.git,
	.tox,
	docs,
	*migrations*,
max-line-length = 88

[doc8]
ignore-path = .eggs,*.egg-info
max-line-length = 88

[isort]
line_length = 88
multi_line_output = 3
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses = true
include_trailing_comma = true
lines_between_types = 1
